[tool.poetry]
name = "drone-swarm-search"
version = "0.1.0"
description = ""
authors = ["leonardodma <leonardodma@al.insper.edu.br>"]
readme = "README.md"
packages = [
    { include = "scripts" },
    { include = "core" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.16.0,<1.19.0"
pettingzoo = "^1.22.3"
pygame = "^2.2.0"

[tool.poetry.scripts]
test = 'scripts:poetry_test'


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
